--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "description": "e2e tests for sheSmashes",
   "scripts": {
     "test": "wdio wdio.conf.js",
-    "report": "allure generate --clean --output ./report"
+    "report": "allure generate . --clean",
+    "server": "selenium-standalone start"
   },
   "author": "Mamta Modi",
   "license": "ISC",
   "devDependencies": {
     "allure-commandline": "^2.5.0",
+    "selenium-server-standalone": "^2.53.1",
     "wdio-allure-reporter": "^0.2.0",
     "wdio-mocha-framework": "^0.5.12",
+    "wdio-selenium-standalone-service": "0.0.9",
+    "wdio-spec-reporter": "^0.1.3",
     "webdriverio": "^4.10.1"
+  },
+  "dependencies": {
+    "chai": "^4.1.2",
+    "isvisible": "^1.0.6",
+    "spec": "^1.0.1"
   }
 }
